--- a/appsettings.json
+++ b/appsettings.json
@@ -3,9 +3,8 @@
         "DefaultConnection": "Server=DESKTOP-8SDDV0E\\SQLEXPRESS;Database=AudioEmotionDb_1;Trusted_Connection=True;TrustServerCertificate=True;"
     },
     "Jwt": {
-        "Key": "Supersecretkey12345",
-        "Issuer": "AudioEmotionApp",
-        "Audience": "AudioEmotionUsers"
+        "Key": "Supersecretkey12345"
+        
     },
     "Logging": {
         "LogLevel": {
